sap-s4hana-soap/2.0/modules/ROOT/pages/sap-s4hana-soap-connector-studio.adoc
= SAP S/4HANA SOAP Cloud - Studio Configuration - Mule 4
:page-aliases: connectors::sap/sap-s4hana-soap-connector-studio.adoc

Studio editors help you design and update your Mule applications, properties, and configuration files.

To configure a connector in Anypoint Studio:

. Create a Mule project.
. Supply your authentication credentials to Anypoint Platform.
. Add the connector to your Mule project.
. Configure the connector.

Follow these best practices when you configure an input source and connector in Studio:

* Configure an associated global element for the connector.
* Create a YAML or properties file to contain your properties, and then reference the file from the configuration.

== Add the Connector to Your Project

Add SAP S/4HANA SOAP Connector to a Mule project to automatically populate the XML code with the connector's namespace and schema location, as well as to add the required dependencies to the project's pom.xml file.

. In Studio, create a Mule project.
. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type `SAP S/4HANA SOAP` in the search field.
. Click the SAP S/4HANA SOAP Cloud connector name in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.


== Configure an Input Source

This connector provides an input source operation. You can configure an input source for the connector using one of the following:

* *Outbound Message Listener > Listener*
* *HTTP > Listener*
* *Core > Scheduler*

== Global Configuration Elements

To use SAP S/4HANA SOAP Cloud Connector in a Mule app, you can configure a global SAP S/4HANA configuration element for use by SAP S/4HANA connector operations in your application.

You can put placeholder values in the `mule-artifact.content` configuration file in the `src/main/resources` folder of your project.

You can either enter your credentials in the global configuration content or
reference a configuration file that contains the values for your credentials.
Using a configuration file is recommended for simpler maintenance and better reuse of your project. Keeping these values in a separate file is useful if you
need to deploy to different environments, such as production, development, and QA, where access credentials might differ.

=== Configure the SAP S/4HANA Cloud SOAP Config

Use the Global Element Properties configuration dialog to configure a global element for SAP S/4HANA Cloud SOAP Connector:

. In your project, click the *Global Elements* tab at the base of the canvas.
. In the *Global Configuration Elements* screen, click *Create*:
+
image::sap-hana-global-config-wizard.png[]
+
. In the *Choose Global Type* wizard, expand *Connector Configuration*, select *SAP S/4HANA Cloud SOAP Config*, and click *OK*.
. Configure the following values in the *General* tab:
.. In the *Connection* drop-down, select the connection type:
  * *Basic authentication* +
  For basic authentication, provide the following required values:
  ** Service Base URL +
  Enter the URL of the SAP S/4HANA instance you want to manage.
  ** Username +
  Enter the user name used to initialize the session.
  ** Password +
  Enter the password used to authenticate the user.
  * *OAuth 2 Application Connection Provider* +
  For OAuth 2.0 authentication, enter the following required information:
  ** Service base URL +
  Enter the base URL of the service provider of the SAP S/4HANA system to access from the connector. All other endpoints are derived from this base URL.
  ** Client ID +
  Enter the OAuth client ID that is registered with the service provider.
  ** Client secret +
  Enter the OAuth client secret that corresponds to the client ID and is registered with the service provider.
.. Enter the required information for the selected connection type, and click *OK*.
.. Click *Test Connection* to ensure that your access credentials are correct.
. Click the *Advanced* tab to configure the following values:
+
[%header,cols="30s,70a"]
|===
|Studio Field |Description
|Discovery Service Enabled |Feature switch for service discovery. If disabled, the service discovery relative path is not applied.
|Discovery Service Path | Relative path from the base URL to the service to use for automatic services discovery.
|Service directory |Common HTTP directory for all SAP services. You can leave this parameter blank, and specify the HTTP directory individually for every service in the unlisted services list.
|Unlisted services |List of services to add to the list of discovered services.
|Service discovery resolution timeout | Connection timeout for service discovery.
|Service discovery timeout unit | Time unit to use in the service discovery resolution timeout configuration.
|Default headers |Custom headers that can be included in each request sent.
|Default query parameter |Custom query parameters to include in each request sent.
|TLS configuration |TLS configuration.
|Proxy configuration |Configuration for executing requests through a proxy.
|===
+
. Click *OK* to save the global connector configuration.

=== Configure the SAP S/4HANA Cloud SOAP Listener Config

Use the Global Element Properties configuration dialog to configure a global element for SAP S/4HANA Cloud SOAP Connector:

. In your project, click the *Global Elements* tab at the base of the canvas.
. In the *Global Configuration Elements* screen, click *Create*:
+
image::sap-hana-source-global-config-wizard.png[]
+
. In the *Choose Global Type* wizard, expand *Connector Configuration*, select *SAP S/4HANA Cloud SOAP Listener Config*, and click *OK*.
. Configure the following values in the *General* tab:
* *HTTTP Listener* +
   Reference to a global HTTPS Listener configuration, for example: `HTTPS_Listener_config`. 
   This configuration has to be secured by using **HTTPS protocol** in order to receive outbound messages from the SAP S/4HANA.
* *WSDL Pathr* +
   Specify the paths to the WSDL definitions which will be used for resolving the metadata keys.
* *Encoding* +
   Character encoding used in the messaging.
. Click *OK* to save the global connector configuration.

---
**NOTE**

There is a possibility to share the same path between multiple sources. However, having multiple sources sharing the same path and listening to the same message type is not supported. The list of message types specifies message types the source can listen to. Message types are built from the provided WSDL definitions. There is a message type option **ANY**, which is always present and allows the source to listen to any outbound message type sent from SAP S/4HANA.

---

== Next Step

After configuring the SAP S/4HANA SOAP Cloud Connector for use in Studio, see the
xref:sap-s4hana-soap-connector-examples.adoc[Examples]
topic for more Studio information.

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
